[package]
name = "basedrop"
version = "0.1.3"
authors = ["Micah Johnston <micahrjohnston@gmail.com>"]
edition = "2018"
description = "Memory management tools for real-time audio and other latency-critical scenarios"
repository = "https://github.com/micahrj/basedrop"
readme = "README.md"
license = "MIT/Apache-2.0"

[dependencies]
loom = { version = "0.7", optional = true }

[features]
loom = ["dep:loom"]
